tests/snapshots/golden_json__fixtures_match_their_json_goldens@rocky9-base-gaps.log.snap
---
source: tests/golden_json.rs
expression: report
input_file: tests/fixtures/rocky9-base-gaps.log
---
--- why --format json exit 0 ---
{
  "schema": 1,
  "action": "why",
  "diagnostics": [
    {
      "line": null,
      "msg": "3 untrusted path(s) need a trust entry, not a rule: run rulesteward fapolicyd trust on the same input"
    }
  ],
  "entries": [
    {
      "rule": 1,
      "file": null,
      "text": null,
      "denials": 2,
      "subject_side": null,
      "rules": 0,
      "trust": 2
    },
    {
      "rule": 2,
      "file": null,
      "text": null,
      "denials": 4,
      "subject_side": null,
      "rules": 0,
      "trust": 1
    }
  ]
}
--- stderr ---
--- rules --format json exit 0 ---
{
  "schema": 1,
  "action": "rules",
  "diagnostics": [
    {
      "line": null,
      "msg": "3 untrusted path(s) need a trust entry, not a rule: run rulesteward fapolicyd trust on the same input"
    }
  ],
  "entries": []
}
--- stderr ---
--- rules --dir-min 2 --format json exit 0 ---
{
  "schema": 1,
  "action": "rules",
  "diagnostics": [
    {
      "line": null,
      "msg": "3 untrusted path(s) need a trust entry, not a rule: run rulesteward fapolicyd trust on the same input"
    }
  ],
  "entries": []
}
--- stderr ---
--- trust --format json exit 0 ---
{
  "schema": 1,
  "action": "trust",
  "diagnostics": [],
  "entries": [
    {
      "path": "/tmp/gaps/spaced bash",
      "commands": [
        "fapolicyd-cli --file add '/tmp/gaps/spaced bash'",
        "fapolicyd-cli --update"
      ]
    },
    {
      "path": "/tmp/gaps/target",
      "commands": [
        "fapolicyd-cli --file add '/tmp/gaps/target'",
        "fapolicyd-cli --update"
      ]
    },
    {
      "path": "/tmp/gaps/deleted",
      "commands": [
        "fapolicyd-cli --file add '/tmp/gaps/deleted'",
        "fapolicyd-cli --update"
      ]
    }
  ]
}
--- stderr ---
